# hypergen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_networkit.cpp  build_nk.sh  compile.sh  main_benchmark_hypergen.cpp  main_benchmark_nkopt.cpp  main_hyper.cpp  radial_distribution.cpp
experiments/: analyse_logs.ipynb  analyse_logs.py  run_experiments.py
include/: ActiveManager.cpp  ActiveManager.hpp  Assert.hpp  BandSegment.cpp  BandSegment.hpp  Configuration.cpp  Configuration.hpp  Definitions.hpp  Generator.cpp  Generator.hpp  Geometry.cpp  Geometry.hpp  Histogram.cpp  Histogram.hpp  Point.hpp  PointGenerator.cpp  PointGenerator.hpp  RandomHelper.cpp  RandomHelper.hpp  ScopedTimer.hpp  Segment.cpp  Segment.hpp  Summation.hpp
libs/NetworKit/: NetworKit.kdev4  SConstruct  benchmark_hyper.cpp  build.conf
libs/NetworKit/include/: NetworKit
libs/NetworKit/networkit/cpp/generators/: HyperbolicGenerator.cpp  HyperbolicGenerator.h  HyperbolicGeneratorOpt.cpp
libs/NetworKit/networkit/cpp/geometric/: HyperbolicSpace.h
related_work/: girg.patch
